--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: teknetz
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: dckr_pat_qtBBSQ0qaa95O3gkRlaGXiyGs4A
 
       - name: Build and push
         uses: docker/build-push-action@v4
