--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,5 +1,5 @@
 name: Build and Push Docker Image
-##
+
 on:
   push:
     branches: [ main ]
@@ -15,15 +15,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to DockerHub
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          username: teknetz
-          password: dckr_pat_qtBBSQ0qaa95O3gkRlaGXiyGs4A
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: teknetz/wan:latest
+          tags: ghcr.io/${{ github.repository_owner }}/wan:latest
